codegen/ui_tests/rhai_fn_rename_dot.stderr
error: Rhai function names may not contain dot
  --> $DIR/rhai_fn_rename_dot.rs:12:22
   |
12 |     #[rhai_fn(name = "foo.bar")]
   |                      ^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_rename_dot.rs:23:8
   |
23 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
